--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,7 +1,7 @@
 - project :
     print : Ture # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
     modal : True # If 'True' is selected, modal can open in 'portfolio.html'. 
-    url : https://github.com/users/jsyang-dev/projects/1 # Full URL
+    url : https://github.com/jsyang-dev/myrecipes-front.git # Full URL
     image : "front-screenshot.jpg" # path: assets/project/
     date : 2019.09 ~ 개발중
     title : MY.레시피
